almost done and fix the mvn site, except: 1. documentation - on the way 2. run deb package in pre-deploy- on the way 3. look into sample postinst and prerm

--- a/Implementation/pom.xml
+++ b/Implementation/pom.xml
@@ -58,7 +58,6 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <archive>
@@ -73,6 +72,13 @@
             <!-- The jar with all dependencies -->
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>${main-class}</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
             </plugin>
 
             <!-- This plugin copy dependency to Package module/ lib folder -->
