almost done and fix the mvn site, except: 3. look into sample postinst and prerm

--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,7 @@
                     <configuration>
                         <filesets>
                             <fileset><directory>${deb-packaging-location}</directory></fileset>
-                            <fileset><directory>**/*.deb</directory></fileset>
+                            <fileset><directory>${basedir}</directory><includes><include>**/*.deb</include></includes></fileset>
                         </filesets>
                     </configuration>
                 </plugin>
