almost done and fix the mvn site, except: 3. look into sample postinst and prerm

--- a/Implementation/pom.xml
+++ b/Implementation/pom.xml
@@ -88,15 +88,11 @@
 
         </plugins>
 
-        <!-- don't put logback.xml into the jar file, use filtering to replace mvn property inside the xml -->
+        <!-- use filtering to replace mvn property inside files found in resources -->
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
-                <targetPath>${project.build.directory}</targetPath>
                 <filtering>true</filtering>
-                <includes>
-                    <include>logback.xml</include>
-                </includes>
             </resource>
         </resources>
     </build>
