--- a/Package/pom.xml
+++ b/Package/pom.xml
@@ -15,28 +15,36 @@
     <packaging>pom</packaging>
 
     <build>
+
         <plugins>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>copy-Debian-control-files</id>
+                        <phase>validate</phase>
+                        <goals><goal>copy-resources</goal></goals>
+
+                        <configuration>
+                            <outputDirectory>${basedir}/DebianPackageArchive/DEBIAN</outputDirectory>
+                            <resources>
+                                <resource>
+
+                                    <directory>${basedir}/src</directory>
+                                    <filtering>true</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
                 <groupId>org.codehaus.mojo</groupId>
                 <executions>
-
-                    <execution>
-                        <id>Insert Package value</id>
-                        <phase>package</phase>
-                        <goals><goal>exec</goal></goals>
-                        <configuration>
-                            <workingDirectory>${basedir}/src</workingDirectory>
-                            <executable>sed</executable>
-                            <arguments>
-                                <argument>1iPackage: ${project.parent.artifactId}\nVersion: ${project.parent.version}</argument>
-                                <argument>control-src</argument>
-                            </arguments>
-                            <outputFile>${basedir}/DebianPackageArchive/DEBIAN/control</outputFile>
-                        </configuration>
-                    </execution>
-
 
                     <execution>
                         <id>Run dpkg-deb for Debian package</id>
